<resources>
    <string name="app_name">IOT_LOCKER</string>
    <string name="account_type">Account Type</string>
    <string name="delivery_person">Delivery Person</string>
    <string name="home_user">Home User</string>
    <string name="login_dp">Login</string>
    <string name="email_dp">Email</string>
    <string name="password_dp">Password</string>
    <string name="login_btn_dp">Login</string>
    <string name="register_link_dp">Register</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_btn">Register</string>
    <string name="login_reg">Login</string>
    <string name="name">Name</string>
    <string name="login_link">Login</string>
    <string name="enter_address_text">Enter address</string>
    <string name="send_address_btn">Send Address</string>
    <string name="enter_otp_text">Enter OTP</string>
    <string name="send_otp_btn">Send OTP</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="no_address_provided">No address provided</string>
    <string name="address">Address:</string>
    <string name="remove_address">Remove Address</string>
    <string name="show_map">Show Map</string>
    <string name="show_address">Show Address</string>
    <string name="send_notification">Send Notification</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet</string>
    <string name="map_view_description">Google Map View</string>
    <string name="image">TODO</string>
    <string name="enter_location">Enter location</string>
    <string name="username">UserName</string>
    <string name="usernamelo">Username</string>
    <string name="usernamedp">Username</string>
    <string name="usernamelog">Username</string>
    <string name="delivery_person_register">Delivery Person Register</string>
    <string name="delivery_person_login">Delivery Person Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="Phone_number">Phone Number</string>
    <string name="phone_numberr">Phone Number</string>
    <string name="home_user_register">Home User Register</string>
    <string name="home_user_login">Home User Login</string>
    <string name="phone_number_hm">Phone Number</string>
    <string name="logoutdp">Logout</string>
    <string name="logout">logOut</string>
    <string name="logouthm">Logout</string>
    <string name="request_otp">Request OTP</string>
    <string name="no_alerts">No alerts</string>
    <string name="no_alerts_yet">No alerts yet</string>
    <string name="request_otp_dialog">Request OTP</string>
    <string name="do_you_want_to_accept_the_request">Do you want to accept the request?</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="check_delivery_person">Check Delivery Person</string>
    <string name="confirm_request">Confirm Request</string>
    <string name="name_dp">Name:</string>
    <string name="phone_number_dp">Phone Number :</string>
    <string name="cancle">Cancle</string>
    <string name="accept_dp">Accept</string>
    <string name="accept_dialog">Accept</string>
    <string name="congratulations">Congratulations</string>
    <string name="accept_btn">Accept</string>
    <string name="cancle_dia">Cancle</string>
    <string name="phone_number_dia">Phone Number:</string>
    <string name="phone_number_didial">Phone Number :</string>
    <string name="decrypt">Decrypt</string>


</resources>