<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterAddressActivity"
    android:layout_margin="10dp"
    android:padding="16dp">

    <EditText
        android:id="@+id/address_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/enter_address_text"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/send_address_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_address_btn"
        android:layout_below="@id/address_edit_text"
        android:layout_marginTop="16dp"
        tools:ignore="VisualLintButtonSize" />


    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_below="@+id/send_address_button"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/check_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_delivery_person"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true"
        tools:ignore="VisualLintButtonSize"
        android:layout_marginBottom="20dp"/>



    <EditText
        android:id="@+id/otp_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_button"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:hint="@string/enter_otp_text"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/send_otp_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_otp_btn"
        android:layout_below="@id/otp_edit_text"
        android:layout_marginTop="16dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/logout_button_hm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logouthm"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/send_otp_button"
        android:layout_marginTop="16dp"/>




</RelativeLayout>