<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddressDisplayActivity"
    android:padding="16dp">

    <Button
        android:id="@+id/show_address_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/address_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_address_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20sp"
        android:text=""
        android:textSize="16sp" />
    <TextView
        android:id="@+id/latitude_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20sp"
        android:text=""
        android:textSize="16sp" />
    <TextView
        android:id="@+id/longitude_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/latitude_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20sp"
        android:text=""
        android:textSize="16sp" />



    <Button
        android:id="@+id/show_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_map"
        android:layout_below="@id/longitude_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>


    <Button
        android:id="@+id/requestOTP_button_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_otp"
        android:layout_gravity="center"
        android:layout_below="@+id/show_map_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />
    <Button
        android:id="@+id/requestDecryptOTP_button_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrypt"
        android:layout_gravity="center"
        android:layout_below="@+id/requestOTP_button_dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />



    <Button
        android:id="@+id/logout_button_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_gravity="center"
        android:layout_below="@+id/requestDecryptOTP_button_dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
      />

    <TextView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logout_button_dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20sp"
        android:text=""
        android:textSize="16sp" />
</RelativeLayout>